<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:id="@+id/tv_created"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/date_payment" />

        <ImageView
            android:id="@+id/ivc_payment"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/iv_payment"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_created"
            android:contentDescription="@string/payment" />

        <TextView
            android:id="@+id/tv_title_payment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="1"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@+id/ivc_payment"
            app:layout_constraintTop_toTopOf="@+id/ivc_payment"
            tools:text="@string/payment_products" />

        <TextView
            android:id="@+id/tv_amount_payment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="1"
            android:layout_marginStart="8dp"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/ivc_payment"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_payment"
            tools:text="@string/title_number" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>